Fix focus controlbar z-index error bug.

--- a/src/assets/css/simpread.css
+++ b/src/assets/css/simpread.css
@@ -219,7 +219,6 @@ sr-rd-crlbar.controlbar {
 
     opacity: 0;
     transition: opacity .5s ease;
-    z-index: 2;
 }
 
 sr-rd-crlbar.controlbar:hover {
